# sdv_simulation_4

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODO-simulation-5.md  brain_fsm_redesign_impl_Phase_10.md  brain_fsm_redesign_impl_Phase_2.md  brain_fsm_redesign_impl_Phase_3.md  brain_fsm_redesign_impl_Phase_4.md  brain_fsm_redesign_impl_Phase_5.md  brain_fsm_redesign_impl_Phase_6.md  brain_fsm_redesign_impl_Phase_7.md  brain_fsm_redesign_impl_Phase_8.md  brain_fsm_redesign_impl_Phase_9.md  brain_fsm_redesign_plan.md  ralph.md  ralph.plan.md  simulation_4.ralph.plan.md
blog-inputs/: episode-02-runtime-wiring-and-actuation-path.md  iteration-1-to-2-architecture-notes.md  stage3-narrative.md  stage4-narrative.md
crates/common/src/: facade.rs  (+8 more)
crates/gateway/: Cargo.toml
crates/gateway/src/: gateway_runtime.rs  main.rs  transition_log.rs
crates/gateway/src/ingress/: mapping.rs
crates/gateway/tests/: assembly_interaction_e2e.rs  front_headlamp_e2e.rs
diagrams/: brain_transitions.md  headlamp_assembly_state_transition.md  wiper_assembly_state_transition.md
docs/: Wiper-Assembly-Design-Plan.md  adr-005-assembly-alphabet.md  adr-006-twin-brain-ingress-coordination.md  contract-tests.md  design-documents.md  design-notes-circular-dependencies.md  design-notes-pyramid-layers.md  design-notes-runtime-observation.md  library-reorg.md  milestone-actor-headlamp-scope.md  project-structure.md
findings/: Actor-FSM-Behaviour-Background-Outcome.md  Code-commenting-plan.md  brain_fsm_turn_explanation.md  sequential-execution-investigation.md  single-thread-guarantee.md  (+1 more)
(+90 files in other folders)
